--- a/src/app/components/store-front/store-front.component.html
+++ b/src/app/components/store-front/store-front.component.html
@@ -16,10 +16,10 @@
               </h4>
               <p class="js-product-desc">{{product.description}}</p>
               <p>
-                <span class="text--bold">ingredients:</span>
+                <span class="text--bold">Highlights:</span>
                 <br/>
-                <span *ngFor="let ingredient of product.ingredients ">
-                  {{ingredient.name}} ({{ingredient.percentage}}%)
+                <span *ngFor="let Highlights of product.Highlights ">
+                  {{Highlights.name}} :- ({{Highlights.percentage}}%)
                   <br/>
                 </span>
               </p>
